# AndroidFFmpeg

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/libs/include/libavfilter/: avfilter.h
app/libs/include/libavformat/: avformat.h  avio.h
app/libs/include/libavutil/: aes.h
app/src/androidTest/java/com/example/kwu/codec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MediaControl.cpp  MediaControl.h  native-VideoContert.cpp  native-jniload.cpp  native-jniload.h  native-lib.cpp  native-media.cpp
app/src/main/cpp/EvoInterface/: EvoMediaSource.cpp  VideoDecoder.cpp
app/src/main/java/com/example/kwu/codec/: JNIObject.java  MainActivity.java  MediaController.java  VideoConvert.java  VideoInfo.java
app/src/main/res/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/kwu/codec/: ExampleUnitTest.java
